-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.1, 6.9.0 Beta1
-
None
-
-
37f69c434 (dev), bdbd42a92 (6.9), 6ca92b07c (6.8), 987c5a193 (16.0)
We recently updated from Qt 6.6.3 to Qt 6.8.1. After receiving a lot of warnings due to the missing qml language server setup for our custom qml modules, we followed the steps described in
Qmlls
Now, F2 in qtcreator always leads to the build directory instead of the source.
We are using Qt creator 15.0. This bug is not reproducible with qt 6.6.3, downgrading to that version with the same qt creator 15.0 leads to the correct F2 behavior.
- depends on
-
QTCREATORBUG-32652 [REG 6.5 -> 6.8] Ctrl + Click goes to build folder
-
- Closed
-
- is duplicated by
-
QTCREATORBUG-32120 F2 Follow symbol under cursor opens build file
-
- Closed
-
- relates to
-
QTCREATORBUG-32652 [REG 6.5 -> 6.8] Ctrl + Click goes to build folder
-
- Closed
-
-
QTBUG-133586 F2 shortcut or Ctrl+Click in qml files sometimes leads to build dir instead of source and sometimes does absolutly nothing
-
- Need More Info
-
-
QTBUG-127661 Creator jumps to auto generated file instead of the real one
-
- Closed
-
-
QTCREATORBUG-27173 Follow symbol under cursor opens file in build directory
-
- Closed
-
-
QTCREATORBUG-31881 QML Control + Click opens debug file
-
- Closed
-
- resulted in
-
QTBUG-132147 qmlls: add resource files to .qmlls.build.ini instead of searching the build directory
-
- Reported
-
-
QTBUG-133547 QML modules: document how they should be modernized or written for new code
-
- Closed
-